Header va hero qismlar yasaldi

--- a/index.html
+++ b/index.html
@@ -14,11 +14,107 @@
     <link rel="stylesheet" href="./styles/style.css" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="rasm" type="image/x-icon" />
-    <title>Document</title>
+    <link
+      rel="shortcut icon"
+      href="./img/Travlog_logo.svg"
+      type="image/x-icon"
+    />
+    <title>Travlog</title>
   </head>
   <body>
+    <!-- Header styles -->
+    <header class="header">
+      <div class="header__container container">
+        <div class="logo">
+          <a href="#"
+            ><img width="142" src="./img/Travlog_logo.svg" alt="Travlog logo"
+          /></a>
+        </div>
+        <div class="nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Special Deals</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="sign">
+          <a href="#" class="log">Log In</a>
+          <button>Sign Up</button>
+        </div>
+      </div>
+    </header>
 
-    
+    <!-- Hero styles -->
+    <hero class="hero">
+      <div class="hero__container container">
+        <div class="hero__text">
+          <div class="explore">
+            <a href="#" class="Explore">Explore the world!</a>
+            <img src="./img/bag__icon.svg" alt="bag icon" />
+          </div>
+
+          <h3>Travel <span>top destination</span> of the world</h3>
+          <p>
+            We always make our customer happy by providing <br />
+            as many choices as possible
+          </p>
+          <div class="hero__button">
+            <button class="hero__get">Get Started</button>
+            <button class="hero__watch">
+              <img src="./img/play__circle.svg" alt="" /> Watch Demo
+            </button>
+          </div>
+        </div>
+      </div>
+    </hero>
+
+    <!-- Company styles -->
+    <div class="company">
+      <div class="company__container container">
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./img/tripadvisor.svg" alt="tripadvisor icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/Expedia.svg" alt="Expedia icon" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/Booking.svg" alt="booking icon" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/airbnb.svg" alt="airbnb icon" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/Rbitz.svg" alt="rbitz icon" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Services style -->
+    <div class="services">
+      <div class="services__container container">
+        <div class="services__text">
+          <h5>Services</h5>
+          <h3>Our top value categories for you</h3>
+        </div>
+        <div class="services__card">
+          <img src="./img/guide__icon.svg" alt="guide icon" />
+          <h4>Best Tour Guide</h4>
+          <p>
+            What looked like a small patch of purple grass, above five feet.
+          </p>
+        </div>
+
+        <div class="services__card">
+          <img src="./img/booking__icon.svg" alt="booking icon" />
+          <h4>Easy Booking</h4>
+          <p>Square, was moving across the sand in their direction.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
