destination qism yasaldi

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <!-- Services style -->
+    <!-- Services styles -->
     <div class="services">
       <div class="services__container container">
         <div class="services__text">
@@ -113,6 +113,67 @@
           <img src="./img/booking__icon.svg" alt="booking icon" />
           <h4>Easy Booking</h4>
           <p>Square, was moving across the sand in their direction.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Destination styles -->
+    <div class="destination">
+      <div class="destination__container container">
+        <div class="destination__top">
+          <div class="destination__top__text">
+            <h4>Top Destination</h4>
+            <h2>Explore top destination</h2>
+          </div>
+          <div class="destination__top__img">
+            <img src="./img/circle_icon.svg" alt="circle icon" />
+          </div>
+        </div>
+        <div class="destination__main__card">
+          <div class="destination__card">
+            <img src="./img/river.png" alt="river and ship" />
+            <div class="destination__card__text">
+              <div class="destination__card__name">
+                <h3>Paradise Beach, Bantayan Island</h3>
+                <h2>$550.16</h2>
+              </div>
+              <p>Rome, Italy</p>
+              <div class="star">
+                <span>4.8</span>
+                <img src="./img/star.svg" alt="star icon" />
+              </div>
+            </div>
+          </div>
+
+          <div class="destination__card">
+            <img src="./img/shif.png" alt="shif" />
+            <div class="destination__card__text">
+              <div class="destination__card__name">
+                <h3>Ocean with full of Colors</h3>
+                <h2>$20.99</h2>
+              </div>
+              <p>Maldives</p>
+              <div class="star">
+                <span>4.5</span>
+                <img src="./img/star.svg" alt="star icon" />
+              </div>
+            </div>
+          </div>
+
+          <div class="destination__card">
+            <img src="./img/cloud.png" alt="cloud" />
+            <div class="destination__card__text">
+              <div class="destination__card__name">
+                <h3>Mountain View, Above the cloud</h3>
+                <h2>$150.99</h2>
+              </div>
+              <p>United Arab Emeries</p>
+              <div class="star">
+                <span>5.0</span>
+                <img src="./img/star.svg" alt="star icon" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
