--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     <!-- Header styles -->
     <header class="header">
       <div class="header__container container">
+        <img class="solid" width="40" height="40" src="./img/bars-solid.svg" alt="">
         <div class="logo">
           <a href="#"
-            ><img width="142" src="./img/Travlog_logo.svg" alt="Travlog logo"
+          ><img width="142" src="./img/Travlog_logo.svg" alt="Travlog logo"
           /></a>
         </div>
+        
         <div class="nav">
           <ul>
             <li><a href="#">Home</a></li>
