--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </button>
           </div>
         </div>
+        <img class="girl__card" src="./img/girl__card.png" alt="" />
       </div>
     </hero>
 
@@ -82,21 +83,29 @@
       <div class="company__container container">
         <ul>
           <li>
-            <a href="#"
+            <a class="comp_logo" href="#"
               ><img src="./img/tripadvisor.svg" alt="tripadvisor icon"
             /></a>
           </li>
           <li>
-            <a href="#"><img src="./img/Expedia.svg" alt="Expedia icon" /></a>
+            <a class="comp_logo" href="#"
+              ><img src="./img/Expedia.svg" alt="Expedia icon"
+            /></a>
           </li>
           <li>
-            <a href="#"><img src="./img/Booking.svg" alt="booking icon" /></a>
+            <a class="comp_logo" href="#"
+              ><img src="./img/Booking.svg" alt="booking icon"
+            /></a>
           </li>
           <li>
-            <a href="#"><img src="./img/airbnb.svg" alt="airbnb icon" /></a>
+            <a class="comp_logo" href="#"
+              ><img src="./img/airbnb.svg" alt="airbnb icon"
+            /></a>
           </li>
           <li>
-            <a href="#"><img src="./img/Rbitz.svg" alt="rbitz icon" /></a>
+            <a class="comp_logo" href="#"
+              ><img src="./img/Rbitz.svg" alt="rbitz icon"
+            /></a>
           </li>
         </ul>
       </div>
@@ -186,6 +195,108 @@
       </div>
     </div>
 
-    
+    <!-- Travel styles -->
+    <div class="travel">
+      <div class="travel__container container_big">
+        <div class="travel__img">
+          <img width="871" src="./img/girl__img.png" alt="girl img" />
+        </div>
+        <div class="travel__text">
+          <h4>Travel Point</h4>
+          <h2>We helping you find your dream location</h2>
+          <span>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC.
+          </span>
+          <div class="card__travel">
+            <div class="travel__card">
+              <h5>500+</h5>
+              <p>Holiday Package</p>
+            </div>
+
+            <div class="travel__card">
+              <h5>100</h5>
+              <p>Luxury Hotel</p>
+            </div>
+
+            <div class="travel__card">
+              <h5>7</h5>
+              <p>Premium Airlines</p>
+            </div>
+
+            <div class="travel__card">
+              <h5>2k+</h5>
+              <p>Happy Customer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Features styles -->
+    <div class="features">
+      <div class="features__container container__big">
+        <div class="features__text">
+          <h4>Key features</h4>
+          <h2>We offer best services</h2>
+          <span
+            >Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45
+            BC.</span
+          >
+          <div class="features__card__main">
+          <div class="features__card">
+            <div class="features__card__img">
+              <img src="./img/location.svg" alt="location icon">
+            </div>
+            <div class="features__card__text">
+              <h6>We offer best services</h6>
+              <p>Lorem Ipsum is not simply random text</p>
+            </div>
+          </div>
+
+          <div class="features__card">
+            <div class="features__card__img">
+              <img src="./img/calendar.svg" alt="location icon">
+            </div>
+            <div class="features__card__text">
+              <h6>Schedule your trip</h6>
+              <p>It has roots in a piece of classical</p>
+            </div>
+          </div>
+
+          <div class="features__card">
+            <div class="features__card__img">
+              <img src="./img/coupons.svg" alt="location icon">
+            </div>
+            <div class="features__card__text">
+              <h6>Get discounted coupons</h6>
+              <p>Lorem Ipsum is not simply random text</p>
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="features__img">
+         
+          <img src="./img/features_img.png" alt="hom and water">
+        </div>
+      </div>
+    </div>
+
+    <!-- Testimonials styles -->
+    <div class="testimonials">
+      <div class="testimonials__container container">
+        <div class="testimonials__main">
+          <h5>Testimonials</h5>
+          <h3>Trust our clients</h3>
+          <img src="./img/girl_icon.png" alt="girl icon">
+          <h4>Mark Smith <span>/ Travel Enthusiast</span></h4>
+          <img src="./img/star__block.svg" alt="Star icon">
+          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+            in a piece of classical Latin literature from 45 BC.</p>
+            <img src="./img/circle_and.svg" alt="circle">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
