--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <h5>Services</h5>
           <h3>Our top value categories for you</h3>
         </div>
+        <div class="services__card__main">
         <div class="services__card">
           <img src="./img/guide__icon.svg" alt="guide icon" />
           <h4>Best Tour Guide</h4>
@@ -131,6 +132,7 @@
           <h4>Easy Booking</h4>
           <p>Square, was moving across the sand in their direction.</p>
         </div>
+      </div>
       </div>
     </div>
 
@@ -282,6 +284,7 @@
         </div>
       </div>
     </div>
+<div class="background"></div>
 
     <!-- Testimonials styles -->
     <div class="testimonials">
