Responsiv qismi qilindi

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="destination__main__card">
           <div class="destination__card">
-            <img src="./img/river.png" alt="river and ship" />
+            <img class="thumb" src="./img/river.png" alt="river and ship" />
             <div class="destination__card__text">
               <div class="destination__card__name">
                 <h3>Paradise Beach, Bantayan Island</h3>
@@ -165,7 +165,7 @@
           </div>
 
           <div class="destination__card">
-            <img src="./img/shif.png" alt="shif" />
+            <img class="thumb" src="./img/shif.png" alt="shif" />
             <div class="destination__card__text">
               <div class="destination__card__name">
                 <h3>Ocean with full of Colors</h3>
@@ -180,7 +180,7 @@
           </div>
 
           <div class="destination__card">
-            <img src="./img/cloud.png" alt="cloud" />
+            <img class="thumb" src="./img/cloud.png" alt="cloud" />
             <div class="destination__card__text">
               <div class="destination__card__name">
                 <h3>Mountain View, Above the cloud</h3>
