--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
           <h3>Our top value categories for you</h3>
         </div>
         <div class="services__card__main">
-        <div class="services__card">
-          <img src="./img/guide__icon.svg" alt="guide icon" />
-          <h4>Best Tour Guide</h4>
-          <p>
-            What looked like a small patch of purple grass, above five feet.
-          </p>
-        </div>
+          <div class="services__card">
+            <img src="./img/guide__icon.svg" alt="guide icon" />
+            <h4>Best Tour Guide</h4>
+            <p>
+              What looked like a small patch of purple grass, above five feet.
+            </p>
+          </div>
 
-        <div class="services__card">
-          <img src="./img/booking__icon.svg" alt="booking icon" />
-          <h4>Easy Booking</h4>
-          <p>Square, was moving across the sand in their direction.</p>
+          <div class="services__card">
+            <img src="./img/booking__icon.svg" alt="booking icon" />
+            <h4>Easy Booking</h4>
+            <p>Square, was moving across the sand in their direction.</p>
+          </div>
         </div>
-      </div>
       </div>
     </div>
 
@@ -247,44 +247,43 @@
             BC.</span
           >
           <div class="features__card__main">
-          <div class="features__card">
-            <div class="features__card__img">
-              <img src="./img/location.svg" alt="location icon">
+            <div class="features__card">
+              <div class="features__card__img">
+                <img src="./img/location.svg" alt="location icon" />
+              </div>
+              <div class="features__card__text">
+                <h6>We offer best services</h6>
+                <p>Lorem Ipsum is not simply random text</p>
+              </div>
             </div>
-            <div class="features__card__text">
-              <h6>We offer best services</h6>
-              <p>Lorem Ipsum is not simply random text</p>
-            </div>
-          </div>
 
-          <div class="features__card">
-            <div class="features__card__img">
-              <img src="./img/calendar.svg" alt="location icon">
+            <div class="features__card">
+              <div class="features__card__img">
+                <img src="./img/calendar.svg" alt="location icon" />
+              </div>
+              <div class="features__card__text">
+                <h6>Schedule your trip</h6>
+                <p>It has roots in a piece of classical</p>
+              </div>
             </div>
-            <div class="features__card__text">
-              <h6>Schedule your trip</h6>
-              <p>It has roots in a piece of classical</p>
-            </div>
-          </div>
 
-          <div class="features__card">
-            <div class="features__card__img">
-              <img src="./img/coupons.svg" alt="location icon">
-            </div>
-            <div class="features__card__text">
-              <h6>Get discounted coupons</h6>
-              <p>Lorem Ipsum is not simply random text</p>
+            <div class="features__card">
+              <div class="features__card__img">
+                <img src="./img/coupons.svg" alt="location icon" />
+              </div>
+              <div class="features__card__text">
+                <h6>Get discounted coupons</h6>
+                <p>Lorem Ipsum is not simply random text</p>
+              </div>
             </div>
           </div>
-        </div>
         </div>
         <div class="features__img">
-         
-          <img src="./img/features_img.png" alt="hom and water">
+          <img src="./img/features_img.png" alt="hom and water" />
         </div>
       </div>
     </div>
-<div class="background"></div>
+    <div class="background"></div>
 
     <!-- Testimonials styles -->
     <div class="testimonials">
@@ -292,14 +291,18 @@
         <div class="testimonials__main">
           <h5>Testimonials</h5>
           <h3>Trust our clients</h3>
-          <img src="./img/girl_icon.png" alt="girl icon">
+          <img src="./img/girl_icon.png" alt="girl icon" />
           <h4>Mark Smith <span>/ Travel Enthusiast</span></h4>
-          <img src="./img/star__block.svg" alt="Star icon">
-          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-            in a piece of classical Latin literature from 45 BC.</p>
-            <img src="./img/circle_and.svg" alt="circle">
+          <img src="./img/star__block.svg" alt="Star icon" />
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC.
+          </p>
+          <img src="./img/circle_and.svg" alt="circle" />
         </div>
       </div>
     </div>
+
+    
   </body>
 </html>
