subscribe qismi yasaldi

--- a/index.html
+++ b/index.html
@@ -303,6 +303,16 @@
       </div>
     </div>
 
-    
+    <!-- subscribe styles -->
+    <div class="subscribe">
+      <div class="subscribe__container container">
+        <h4>subscribe to our newsletter</h4>
+        <h2>Prepare yourself & let’s explore the beauty of the world</h2>
+        <form>
+          <input type="text" value="Your Email" />
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
